<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layoutexample</string>
    <string name="action_settings">Settings</string>
    <string name="to">Enter Text</string>
     <string name="Submit">Submit</string>
      <string name="hello">Hello</string>
       <string name="ShowNotification">Show Notification</string>
        <string name="Next">Next</string>

</resources>
